fix bugs with modals z-index

--- a/src/entities/ModalSlider/ui/ModalSlider.module.scss
+++ b/src/entities/ModalSlider/ui/ModalSlider.module.scss
@@ -1,4 +1,4 @@
-.wrapper {
+.right {
     background-color: rgba(0 0 0 / 0%);
     transition: background-color 0.25s ease;
     position: fixed;
@@ -8,17 +8,7 @@
     right: 0;
     pointer-events: none;
     z-index: var(--z-modal);
-}
 
-.container {
-    position: fixed;
-    background-color: var(--color-white);
-    opacity: 0;
-    pointer-events: none;
-    transition: transform 0.25s ease, opacity 0s 0.25s;
-}
-
-.right {
     .container {
         top: 0;
         right: 0;
@@ -27,10 +17,25 @@
         width: 100%;
         max-width: 40vw;
         transform: translateX(100%);
+        position: fixed;
+        background-color: var(--color-white);
+        opacity: 0;
+        pointer-events: none;
+        transition: transform 0.25s ease, opacity 0s 0.25s;
     }
 }
 
 .top {
+    background-color: rgba(0 0 0 / 0%);
+    transition: background-color 0.25s ease;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    pointer-events: none;
+    z-index: calc(var(--z-header) - 1);
+
     .container {
         top: var(--navbar-height);
         left: 0;
@@ -38,6 +43,11 @@
         overflow-y: auto;
         width: 100%;
         transform: translateY(-100%);
+        position: fixed;
+        background-color: var(--color-white);
+        opacity: 0;
+        pointer-events: none;
+        transition: transform 0.25s ease, opacity 0s 0.25s;
     }
 }
 
