--- a/src/entities/NavigationList/ui/NavigationList.module.scss
+++ b/src/entities/NavigationList/ui/NavigationList.module.scss
@@ -8,6 +8,10 @@
 .list {
     .link {
         width: fit-content;
+
+        &.mobileLink {
+            color: var(--color-base);
+        }
     }
 }
 
