--- a/src/widgets/BasketModalSlider/ui/Basket.module.scss
+++ b/src/widgets/BasketModalSlider/ui/Basket.module.scss
@@ -1,7 +1,3 @@
-.wrapper {
-    z-index: var(--z-modal);
-}
-
 .container {
     height: 100%;
     min-height: 236px;
